# rDSN.tools.log.monitor

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  log_monitor.thrift  log_monitor.types.h  log_monitor_types.cpp  log_monitor_types.h
src/master/: CMakeLists.txt  config.ini  main.cpp
src/slave/: CMakeLists.txt  log.slave.cpp  log.slave.h  main.cpp
